<resources>
    <string name="app_name">Instagram clone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="like_title">Like</string>
    <string name="profile_title">Profile</string>
    <string name="add_title">Add</string>
    <string name="search_title">Search</string>
</resources>