<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_filled"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/search"
        android:title="@string/search_title" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/plus"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/heartIcon"
        android:icon="@drawable/heart"
        android:title="@string/like_title" />
    <item
        android:id="@+id/userIcon"
        android:icon="@drawable/profile"
        android:title="@string/profile_title" />

</menu>